2006-02-08  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* configure.in:
	* m4/tcl.m4: added TEA 3.5. Scrapped testing for 
	MACOSX_DEPLOYMENT_TARGET.
	* nsd/cache.c: Implemented RFE #1427620
	* tests/test.nscfg: Set cachetimeout to 360 secs
	* tests/ns_cache.test: Reduced number of threads
	testing cache stability from 100 to 16 as it was
	blowing up smaller machines
	* doc/src/man.macros: new file
	* doc/src/README.doc: clarify that "man -l" will
	only work on Linux when using gzipped manpages.

2006-02-08  Bernd Eidenschink  <eide@users.sourceforge.net>

	* nsdb/util.tcl:
	* nsperm/init.tcl:
	* tcl/stats.tcl:
	* tcl/file.tcl:
	* tcl/cache.tcl:
	* tcl/util.tcl: 
	* tcl/ttrace.tcl: "legacy" files, contd.

2006-02-07  Bernd Eidenschink  <eide@users.sourceforge.net>

	* tcl/form.tcl:
	* tcl/http.tcl:
	* tcl/charsets.tcl:
	* tcl/fastpath.tcl:
	* tcl/sendmail.tcl: fixed non-braced expressions and standardized
	comparisons with TCL string operators. Thanks to Gustaf Neumann
	for providing the fixes! There are still some legacy files left.

2006-02-07  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsthread/nsthreadtest.c: Includes "config.h" to get 
	STATIC_BUILD defined.

	* tcl/ttrace.tcl: Removed compat code for Tcl threading extension.
	Arranged to be loaded only once per virtual server.
	Changed license to Mozilla.

	* sample-config.tcl.in:
	* nsd/init.tcl: Trace inits now controled under ns/section/server/tcl 
	and lazyloader ns_param.

2006-02-06  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* tcl/ttrace.tcl: new file (implements RFE #1166553)
	* nsd/init.tcl: added hooks to use trace-based interp inits
	* sample-config.in: add setup for trace-based interp inits
	(disabled per default)
	* Makefile: include sample-config.tcl.in in "make dist"
	* NEWS: added remarks about new trace interp inits

2006-02-05  Stephen Deasey <sdeasey@users.sf.net>

	* nsd/urlspace.c: Remove 'doit' variables with local scope to